# mcp-business-workflows

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_test.py  client_example.py
src/mcp_business_workflows/: auth.py  config.py  errors.py  logging.py  server.py
src/mcp_business_workflows/adapters/: github_client.py  memory_store.py  webhook_client.py
src/mcp_business_workflows/schemas/: github.py  notes.py  status.py  webhooks.py
src/mcp_business_workflows/services/: github_service.py  notes_service.py  status_service.py  webhook_service.py
src/mcp_business_workflows/tools/: github.py  notes.py  status.py  webhooks.py
tests/: conftest.py  test_decision_tools.py  test_github_tools.py  test_notes_tools.py  test_status_tools.py  test_webhooks_tools.py
